Bug 157565 - The Font Color chooser does not show color names any more since 7.6
Summary: The Font Color chooser does not show color names any more since 7.6
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.5.4.2 release
Hardware: All macOS (All)
: medium normal
Assignee: Patrick (volunteer)
URL:
Whiteboard: target:24.2.0 target:7.6.3 target:7.5...
Keywords: bibisectRequest, regression
Depends on:
Blocks: Color-Picker-Widget Tooltip
  Show dependency treegraph
 
Reported: 2023-10-02 16:09 UTC by Sciuriware
Modified: 2025-05-31 14:37 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sciuriware 2023-10-02 16:09:10 UTC
Description:
When choosing a color for fonts, hovering the color matrix does not show
any color names.
This is very cumbersome, because various colors almost look the same.
This chooser is different from the one in the Table menu for Backgrounds.

Steps to Reproduce:
1.open the color matrix
2.hover any color square
3.nothing shows up

Actual Results:
no color ident

Expected Results:
something like before:  Red 3, Green 1, ...


Reproducible: Always


User Profile Reset: No

Additional Info:
Version     7.6.2.1 (X86_64)
Build       56f7684011345957bbf33a7ee678afaf4d2ba333
Comment 1 V Stuart Foote 2023-10-03 13:55:26 UTC
Can not confirm on Windows builds.

The color picker shows pop-up tooltips for each color swatch on mouse over.

Checked 'Standard', 'LibreOffice', and 'HLC' palettes.

Version: 7.6.2.1 (X86_64) / LibreOffice Community
Build ID: 56f7684011345957bbf33a7ee678afaf4d2ba333
CPU threads: 8; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded
Comment 2 Sciuriware 2023-10-03 14:21:39 UTC
Over the last years I noticed several differences between the MSWindows releases and the MacOS ones.

For instance: unwanted zoom when CMD/C (copy to clipboard) is hit.

The color picker problem was introduced with 7.6
;JOOP!
Comment 3 raal 2023-10-03 18:58:34 UTC
No repro with Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 0f2918c25daab25cd0721d69f0506fe04456262d
CPU threads: 4; OS: Linux 6.2; UI render: default; VCL: x11
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded
Comment 4 Stéphane Guillou (stragu) 2023-10-17 09:18:24 UTC
Tested on macOS, reproduced in:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: d88779fc86385dde1215fd28b78a69eacc6b4f97
CPU threads: 2; OS: Mac OS X 13.2.1; UI render: Skia/Raster; VCL: osx
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

and

Version: 7.6.2.1 (X86_64) / LibreOffice Community
Build ID: 56f7684011345957bbf33a7ee678afaf4d2ba333
CPU threads: 2; OS: Mac OS X 13.2.1; UI render: Skia/Raster; VCL: osx
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

and

Version: 7.5.4.2 (X86_64) / LibreOffice Community
Build ID: 36ccfdc35048b057fd9854c757a8b67ec53977b6
CPU threads: 2; OS: Mac OS X 13.2.1; UI render: default; VCL: osx
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

Not reproduced in:

Version: 7.4.6.2 / LibreOffice Community
Build ID: 5b1f5509c2decdade7fda905e3e1429a67acd63d
CPU threads: 2; OS: Mac OS X 13.2.1; UI render: default; VCL: osx
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

-> confirmed regression.

Patrick, I thought you might be interested? Bug 152173 and its b69db38a38b09e158e8d46d8b717db85860ca874 fix comes to mind.
Comment 5 Sciuriware 2023-10-18 06:59:20 UTC
Running 7.6.2.1 (X86_64) Build  56f7684011345957bbf33a7ee678afaf4d2ba333

op iMac running MacOS 11.7.10 (BigSur) Intel:

Color Choosers:

Picture Background Color              NO HOVERS
Picture Border Color                  NO HOVERS
Text Font Color                       NO HOVERS
Text Character HighLighting Color     NO HOVERS
Table Properties Background Color                 H O V E R S ! ! !
Table Properties Border Color         NO HOVERS

Your turn.
;JOOP!
Comment 6 Patrick (volunteer) 2023-10-19 16:56:11 UTC
(In reply to Stéphane Guillou (stragu) from comment #4)
> Patrick, I thought you might be interested? Bug 152173 and its
> b69db38a38b09e158e8d46d8b717db85860ca874 fix comes to mind.

I can confirm that commit b69db38a38b09e158e8d46d8b717db85860ca874 is the cause of this bug.

I will see if I can rework the fix for bug 152173 without causing this bug.
Comment 7 Patrick (volunteer) 2023-10-19 20:41:10 UTC
I have uploaded a patch that fixes this bug:

https://gerrit.libreoffice.org/c/core/+/158212

Once it passes the automated tests, I will commit it and backport it to the next releases of LibreOffice 7.5 and 7.6.
Comment 8 Commit Notification 2023-10-20 00:21:08 UTC
Patrick Luby committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/fb68f0761c3cfadf73f261d2d44de7b4e277e0af

tdf#157565 show tooltip if any parent window is the key window

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2023-10-20 12:40:29 UTC
Patrick Luby committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/ae19777b039a0111fc2e9d51b57f23ae321c9d2c

tdf#157565 show tooltip if any parent window is the key window

It will be available in 7.6.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2023-10-20 12:40:32 UTC
Patrick Luby committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/cb1aa7c36f9f630a871f4bdc00ca3bf62f8ba58b

tdf#157565 show tooltip if any parent window is the key window

It will be available in 7.5.9.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2023-10-27 08:45:53 UTC
Patrick Luby committed a patch related to this issue.
It has been pushed to "libreoffice-7-5-8":

https://git.libreoffice.org/core/commit/8028799b51d0a645db93b8c8400b62558b2c6278

tdf#157565 show tooltip if any parent window is the key window

It will be available in 7.5.8.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Sciuriware 2025-05-31 13:18:14 UTC
Sorry, a bit late, but

it all seems to work on 25.2.3

The only issue is that the pointer (cursor) may obscure the text.
;JOOP!
Comment 13 V Stuart Foote 2025-05-31 14:37:25 UTC
Verified then...